# stunts-engine

./: Cargo.toml  README.md
src/: animations.rs  camera.rs  capture.rs  dot.rs  editor.rs  encode.rs  export-old.rs  export.rs  fonts.rs  gpu_resources.rs  lib.rs  main.rs  motion_arrow.rs  motion_path.rs  mp4box.rs  polygon.rs  saved_state.rs  st_image.rs  st_video.rs  text.rs  text_due.rs  timelines.rs  transform.rs  vertex.rs  video_worker.rs
src/encoder/: encode.rs  mod.rs  profiles.rs
src/export/: encode.rs  exporter.rs  frame_buffer.rs  mod.rs  pipeline.rs
src/export/shaders/: vert_primary.wgsl
src/fetchers/: media.rs
src/transcode/: encode.rs  profiles.rs  session.rs
