[package]
name = "stunts-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = "1.19.0"
wgpu = "22.1.0"
pollster = "0.3.0"
winit = "0.29"
futures = "0.3.30"
uuid = { version = "1.8.0", features = ["v4"] }
lyon_tessellation = "1.0.15"
floem_renderer = { path = "D:/projects/common/common-floem/renderer", version = "0.1.0" }
strum = "0.26.3"
strum_macros = "0.26"
floem-winit = { git = "https://github.com/lapce/winit", rev = "c8d3b8fd6fa4ffd5e0f99be78aacddcf6de57bcd", features = ["rwh_05"] }
cgmath = "0.18.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3.11.0"
fontdue = "0.9.2"
windows = { version = "0.58", features = ["implement", "Win32_Media_MediaFoundation", "Win32_System", "Win32_System_Com", "Win32_System_Memory", "Win32_UI_Shell_PropertiesSystem", "Win32_System_Threading", "Win32_Security", "Win32_System_Com_Urlmon", "Win32_Media_KernelStreaming", "Win32_System_Com_StructuredStorage"] }
windows-core = "0.58.0"
image = "0.25.5"
common-motion-2d-reg = { path = "D:/projects/common/common-motion-2d-reg", version = "0.1.0" }
tokio = { version = "1.39.0", features = ["full"] }
rand = "0.8.5"

[lib]
name = "stunts_engine"
path = "src/lib.rs"